--- a/src/app/components/skills/backpack-skill/backpack-skill.component.html
+++ b/src/app/components/skills/backpack-skill/backpack-skill.component.html
@@ -13,7 +13,7 @@
       </mat-expansion-panel-header>
       <div fxLayout="column">
         <mat-card>
-          <mat-input-container>
+          <mat-form-field>
             <span matPrefix>{{ 'COMPONENTS__SKILLS__BACKPACK__ROWS_PREFIX' | translate }}</span>
             <input matInput [placeholder]="'COMPONENTS__SKILLS__BACKPACK__ROWS' | translate" type="text"
                    pattern="[+-][0-9]"
@@ -23,7 +23,7 @@
             <mat-error *ngIf="modelRows.errors?.pattern">
               {{ 'COMPONENTS__SKILLS__ERROR_FORMAT' | translate:{format: '[+-][0-9]'} }}
             </mat-error>
-          </mat-input-container>
+          </mat-form-field>
           <button mat-icon-button [stcDynamicPopoverAnchorFor]="rowsPopover">
             <mat-icon svgIcon="info_outline">info_outline</mat-icon>
           </button>
