--- a/src/app/components/skills/beacon-skill/beacon-skill.component.html
+++ b/src/app/components/skills/beacon-skill/beacon-skill.component.html
@@ -29,7 +29,7 @@
       </mat-expansion-panel-header>
       <div fxLayout="column">
         <mat-card>
-          <mat-input-container>
+          <mat-form-field>
             <span matPrefix>{{ 'COMPONENTS__SKILLS__BEACON__RANGE_PREFIX' | translate }}</span>
             <input matInput [placeholder]="'COMPONENTS__SKILLS__BEACON__RANGE' | translate" type="text"
                    pattern="[+-][0-9]+(\.[0-9]+)?"
@@ -40,13 +40,13 @@
             <mat-error *ngIf="modelRange.errors?.pattern">
               {{ 'COMPONENTS__SKILLS__ERROR_FORMAT' | translate:{format: '[+-][double]'} }}
             </mat-error>
-          </mat-input-container>
+          </mat-form-field>
           <button mat-icon-button [stcDynamicPopoverAnchorFor]="rangePopover">
             <mat-icon svgIcon="info_outline">info_outline</mat-icon>
           </button>
         </mat-card>
         <mat-card>
-          <mat-input-container>
+          <mat-form-field>
             <span matPrefix>{{ 'COMPONENTS__SKILLS__BEACON__DURATION_PREFIX' | translate }}</span>
             <input matInput [placeholder]="'COMPONENTS__SKILLS__BEACON__DURATION' | translate" type="text"
                    pattern="[+-][0-9]+"
@@ -57,13 +57,13 @@
             <mat-error *ngIf="modelDuration.errors?.pattern">
               {{ 'COMPONENTS__SKILLS__ERROR_FORMAT' | translate:{format: '[+-][integer]'} }}
             </mat-error>
-          </mat-input-container>
+          </mat-form-field>
           <button mat-icon-button [stcDynamicPopoverAnchorFor]="durationPopover">
             <mat-icon svgIcon="info_outline">info_outline</mat-icon>
           </button>
         </mat-card>
         <mat-card>
-          <mat-input-container>
+          <mat-form-field>
             <span matPrefix>{{ 'COMPONENTS__SKILLS__BEACON__NUMBER_PREFIX' | translate }}</span>
             <input matInput [placeholder]="'COMPONENTS__SKILLS__BEACON__NUMBER' | translate" type="text"
                    pattern="[+-][0-9]+(\.[0-9]+)?"
@@ -74,7 +74,7 @@
             <mat-error *ngIf="modelNumber.errors?.pattern">
               {{ 'COMPONENTS__SKILLS__ERROR_FORMAT' | translate:{format: '[+-][double]'} }}
             </mat-error>
-          </mat-input-container>
+          </mat-form-field>
           <button mat-icon-button [stcDynamicPopoverAnchorFor]="countPopover">
             <mat-icon svgIcon="info_outline">info_outline</mat-icon>
           </button>
@@ -86,7 +86,7 @@
               <img mat-list-avatar class="skill-icon" src="assets/img/skills/beacon/absorption.png">
               <span mat-line style="overflow: unset !important;">
                 {{ 'COMPONENTS__SKILLS__BEACON__BUFF__ABSORPTION' | translate }}
-                <mat-input-container>
+                <mat-form-field>
                   <input matInput [placeholder]="'COMPONENTS__SKILLS__BEACON__BUFF_LEVEL' | translate" type="text"
                          pattern="[+-][0-9]+"
                          [name]="'buff_absoption_' + i" #modelBuffAbsorption="ngModel"
@@ -95,7 +95,7 @@
             <mat-error *ngIf="modelBuffAbsorption.errors?.pattern">
               {{ 'COMPONENTS__SKILLS__ERROR_FORMAT' | translate:{format: '[+-][integer]'} }}
             </mat-error>
-                </mat-input-container>
+                </mat-form-field>
             </span>
             </mat-list-item>
             <mat-list-item>
@@ -112,7 +112,7 @@
               <img mat-list-avatar class="skill-icon" src="assets/img/skills/beacon/haste.png">
               <span mat-line>
                 {{ 'COMPONENTS__SKILLS__BEACON__BUFF__HASTE' | translate }}
-                <mat-input-container>
+                <mat-form-field>
                   <input matInput [placeholder]="'COMPONENTS__SKILLS__BEACON__BUFF_LEVEL' | translate" type="text"
                          pattern="[+-][0-9]+"
                          [name]="'buff_haste_' + i" #modelBuffHaste="ngModel"
@@ -121,14 +121,14 @@
             <mat-error *ngIf="modelBuffHaste.errors?.pattern">
               {{ 'COMPONENTS__SKILLS__ERROR_FORMAT' | translate:{format: '[+-][integer]'} }}
             </mat-error>
-                </mat-input-container>
+                </mat-form-field>
               </span>
             </mat-list-item>
             <mat-list-item>
               <img mat-list-avatar class="skill-icon" src="assets/img/skills/beacon/jumpboost.png">
               <span mat-line>
                 {{ 'COMPONENTS__SKILLS__BEACON__BUFF__JUMP_BOOST' | translate }}
-                <mat-input-container>
+                <mat-form-field>
                   <input matInput [placeholder]="'COMPONENTS__SKILLS__BEACON__BUFF_LEVEL' | translate" type="text"
                          pattern="[+-][0-9]+"
                          [name]="'buff_jump_boost_' + i" #modelBuffJumpBoost="ngModel"
@@ -137,7 +137,7 @@
             <mat-error *ngIf="modelBuffJumpBoost.errors?.pattern">
               {{ 'COMPONENTS__SKILLS__ERROR_FORMAT' | translate:{format: '[+-][integer]'} }}
             </mat-error>
-                </mat-input-container>
+                </mat-form-field>
               </span>
             </mat-list-item>
             <mat-list-item>
@@ -164,7 +164,7 @@
               <img mat-list-avatar class="skill-icon" src="assets/img/skills/beacon/resistance.png">
               <span mat-line>
                 {{ 'COMPONENTS__SKILLS__BEACON__BUFF__RESISTANCE' | translate }}
-                <mat-input-container>
+                <mat-form-field>
                   <input matInput [placeholder]="'COMPONENTS__SKILLS__BEACON__BUFF_LEVEL' | translate" type="text"
                          pattern="[+-][0-9]+"
                          [name]="'buff_resistance_' + i" #modelBuffResistance="ngModel"
@@ -173,14 +173,14 @@
             <mat-error *ngIf="modelBuffResistance.errors?.pattern">
               {{ 'COMPONENTS__SKILLS__ERROR_FORMAT' | translate:{format: '[+-][integer]'} }}
             </mat-error>
-                </mat-input-container>
+                </mat-form-field>
               </span>
             </mat-list-item>
             <mat-list-item>
               <img mat-list-avatar class="skill-icon" src="assets/img/skills/beacon/speed.png">
               <span mat-line>
                 {{ 'COMPONENTS__SKILLS__BEACON__BUFF__SPEED' | translate }}
-                <mat-input-container>
+                <mat-form-field>
                   <input matInput [placeholder]="'COMPONENTS__SKILLS__BEACON__BUFF_LEVEL' | translate" type="text"
                          pattern="[+-][0-9]+"
                          [name]="'buff_speed_' + i" #modelBuffSpeed="ngModel"
@@ -189,14 +189,14 @@
             <mat-error *ngIf="modelBuffSpeed.errors?.pattern">
               {{ 'COMPONENTS__SKILLS__ERROR_FORMAT' | translate:{format: '[+-][integer]'} }}
             </mat-error>
-                </mat-input-container>
+                </mat-form-field>
              </span>
             </mat-list-item>
             <mat-list-item>
               <img mat-list-avatar class="skill-icon" src="assets/img/skills/beacon/strength.png">
               <span mat-line>
                 {{ 'COMPONENTS__SKILLS__BEACON__BUFF__STRENGTH' | translate }}
-                <mat-input-container>
+                <mat-form-field>
                   <input matInput [placeholder]="'COMPONENTS__SKILLS__BEACON__BUFF_LEVEL' | translate" type="text"
                          pattern="[+-][0-9]+"
                          [name]="'buff_strength_' + i" #modelBuffStrength="ngModel"
@@ -205,7 +205,7 @@
             <mat-error *ngIf="modelBuffStrength.errors?.pattern">
               {{ 'COMPONENTS__SKILLS__ERROR_FORMAT' | translate:{format: '[+-][integer]'} }}
             </mat-error>
-                </mat-input-container>
+                </mat-form-field>
              </span>
             </mat-list-item>
             <mat-list-item>
@@ -232,7 +232,7 @@
               <img mat-list-avatar class="skill-icon" src="assets/img/skills/beacon/regeneration.png">
               <span mat-line>
                 {{ 'COMPONENTS__SKILLS__BEACON__BUFF__REGENERATION' | translate }}
-                <mat-input-container>
+                <mat-form-field>
                   <input matInput [placeholder]="'COMPONENTS__SKILLS__BEACON__BUFF_LEVEL' | translate" type="text"
                          pattern="[+-][0-9]+"
                          [name]="'buff_regeneration_' + i" #modelBuffRegeneration="ngModel"
@@ -241,7 +241,7 @@
             <mat-error *ngIf="modelBuffRegeneration.errors?.pattern">
               {{ 'COMPONENTS__SKILLS__ERROR_FORMAT' | translate:{format: '[+-][integer]'} }}
             </mat-error>
-                </mat-input-container>
+                </mat-form-field>
              </span>
             </mat-list-item>
           </mat-list>
