--- a/src/app/components/skills/life-skill/life-skill.component.html
+++ b/src/app/components/skills/life-skill/life-skill.component.html
@@ -14,7 +14,7 @@
     </mat-expansion-panel-header>
     <div fxLayout="column">
       <mat-card>
-        <mat-input-container>
+        <mat-form-field>
           <span matPrefix>{{ 'COMPONENTS__SKILLS__LIFE_HEALTH_PREFIX' | translate }}</span>
           <input matInput [placeholder]="'COMPONENTS__SKILLS__LIFE_HEALTH' | translate" type="text"
                  pattern="[+-][0-9]+(\.[0-9]+)?"
@@ -25,7 +25,7 @@
           <mat-error *ngIf="modelHealth.errors?.pattern">
             {{ 'COMPONENTS__SKILLS__ERROR_FORMAT' | translate:{format: '[+-][double]'} }}
           </mat-error>
-        </mat-input-container>
+        </mat-form-field>
         <button mat-icon-button [stcDynamicPopoverAnchorFor]="healthPopover">
           <mat-icon svgIcon="info_outline">info_outline</mat-icon>
         </button>
