--- a/src/app/components/skilltree-duplicate-dialog/skilltree-duplicate-dialog.component.html
+++ b/src/app/components/skilltree-duplicate-dialog/skilltree-duplicate-dialog.component.html
@@ -1,7 +1,7 @@
 <h1 mat-dialog-title>{{ 'COMPONENTS__SKILLTREE_DUPLICATE_DIALOG__DUPLICATE_SKILLTREE' | translate }}</h1>
 <div mat-dialog-content>{{ 'COMPONENTS__SKILLTREE_DUPLICATE_DIALOG__ENTER_NAME' | translate }}</div>
 <div mat-dialog-actions>
-  <mat-input-container>
+  <mat-form-field>
     <input matInput [placeholder]="'COMPONENTS__SKILLTREE_DUPLICATE_DIALOG__NAME' | translate" [(ngModel)]="name"
            [appSkilltreeDuplicate]="skilltreeNames"
            pattern="[a-zA-Z0-9.-_]*"
@@ -15,7 +15,7 @@
     <mat-error *ngIf="nameInput.errors?.pattern">
       {{ 'COMPONENTS__SKILLTREE_DUPLICATE_DIALOG__ERROR_INVALID_ID' | translate}}
     </mat-error>
-  </mat-input-container>
+  </mat-form-field>
   <button mat-button (click)="done()" [disabled]="name.trim() == '' || nameInput.errors">
     {{ 'COMPONENTS__SKILLTREE_DUPLICATE_DIALOG__DONE' | translate}}
   </button>
