add more projectiles

--- a/src/app/components/skills/ranged-skill/ranged-skill.component.html
+++ b/src/app/components/skills/ranged-skill/ranged-skill.component.html
@@ -84,6 +84,16 @@
             <mat-option value="Egg">
               {{ 'COMPONENTS__SKILLS__RANGED__PROJECTILE__EGG' | translate }}
             </mat-option>
+            <mat-option value="EnderPearl">
+              {{ 'COMPONENTS__SKILLS__RANGED__PROJECTILE__ENDER_PEARL' | translate }}
+            </mat-option>
+            <mat-option value="DragonFireball">
+              {{ 'COMPONENTS__SKILLS__RANGED__PROJECTILE__DRAGON_FIREBALL' | translate }} <span style="color: gray">(1.9+)</span>
+            </mat-option>
+            <mat-option value="Trident">
+              {{ 'COMPONENTS__SKILLS__RANGED__PROJECTILE__TRIDENT' | translate }} <span
+              style="color: gray">(1.13+)</span>
+            </mat-option>
           </mat-select>
         </mat-form-field>
       </mat-card>
