--- a/src/app/components/skilltree-creator/skilltree-creator.component.scss
+++ b/src/app/components/skilltree-creator/skilltree-creator.component.scss
@@ -1,5 +1,6 @@
 .sidenav {
   padding: 10px;
+  width: 60px;
 }
 
 .top-toolbar {
@@ -15,8 +16,4 @@
   .toolbar-button {
     flex: 1 1 25%;
   }
-}
-
-button {
-  min-width: 80px !important;
 }
