--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -17,6 +17,10 @@
     <p mat-line><a target="_blank" href="https://angular.io">https://angular.io</a> (MIT)</p>
   </mat-list-item>
   <mat-list-item>
+    <h4 mat-line class="bold">Angular Material</h4>
+    <p mat-line><a target="_blank" href="https://material.angular.io/">https://material.angular.io/</a> (MIT)</p>
+  </mat-list-item>
+  <mat-list-item>
     <h4 mat-line class="bold">Popover Component for Angular</h4>
     <p mat-line><a target="_blank"
                    href="https://github.com/ncstate-sat/popover">https://github.com/ncstate-sat/popover</a> (MIT)</p>
@@ -35,12 +39,6 @@
     <h4 mat-line class="bold">Material design icons</h4>
     <p mat-line><a target="_blank" href="https://material.io/icons/">https://material.io/icons/</a> (Apache License
       Version 2.0)</p>
-  </mat-list-item>
-  <mat-list-item>
-    <h4 mat-line class="bold">NgxDragDrop</h4>
-    <p mat-line><a target="_blank" href="https://github.com/reppners/ngx-drag-drop">https://github.com/reppners/ngx-drag-drop</a>
-      (MIT)
-    </p>
   </mat-list-item>
   <mat-list-item>
     <h4 mat-line class="bold">ngx-clipboard</h4>
