--- a/src/app/components/skilltree-properties/skilltree-properties.component.html
+++ b/src/app/components/skilltree-properties/skilltree-properties.component.html
@@ -41,6 +41,18 @@
         {{ 'COMPONENTS__SKILLTREE_PROPERTIES__ERROR_NO_WHITESPACES' | translate }}
       </mat-error>
     </mat-form-field>
+    <mat-form-field>
+      <mat-select
+        [placeholder]="'COMPONENTS__SKILLTREE_PROPERTIES__INHERITANCE' | translate"
+        [formControl]="inheritedSkilltreeName"
+        (selectionChange)="updateInheritance('skilltree',inheritedSkilltreeName)">
+        <mat-option [value]="null">{{ 'COMPONENTS__SKILLTREE_PROPERTIES__INHERITANCE_NONE' | translate }}</mat-option>
+        <mat-optgroup [label]="'COMPONENTS__SKILLTREE_PROPERTIES__INHERITANCE_SKILLTREES' | translate">
+          <mat-option *ngFor="let skilltreeName of skilltreeNames"
+                      [value]="skilltreeName">{{ skilltreeName }}</mat-option>
+        </mat-optgroup>
+      </mat-select>
+    </mat-form-field>
   </mat-card>
   <mat-card fxLayout="column" fxFlex.gt-md="calc(50% - 0.5em)" fxFlex="100">
     <mat-form-field>
@@ -62,16 +74,25 @@
       </mat-error>
     </mat-form-field>
     <mat-form-field>
-      <mat-select
-        [placeholder]="'COMPONENTS__SKILLTREE_PROPERTIES__INHERITANCE' | translate"
-        [formControl]="inheritedSkilltreeName"
-        (selectionChange)="updateInheritance('skilltree',inheritedSkilltreeName)">
-        <mat-option [value]="null">{{ 'COMPONENTS__SKILLTREE_PROPERTIES__INHERITANCE_NONE' | translate }}</mat-option>
-        <mat-optgroup [label]="'COMPONENTS__SKILLTREE_PROPERTIES__INHERITANCE_SKILLTREES' | translate">
-          <mat-option *ngFor="let skilltreeName of skilltreeNames"
-                      [value]="skilltreeName">{{ skilltreeName }}</mat-option>
-        </mat-optgroup>
-      </mat-select>
+      <sat-popover #weightPopover xAlign="after" yAlign="center" hasBackdrop backdropClass="cdk-overlay-dark-backdrop">
+        <mat-card>
+          <mat-card-content
+            [innerHTML]="'COMPONENTS__SKILLTREE_PROPERTIES__WEIGHT_DESCRIPTION' | translate"></mat-card-content>
+        </mat-card>
+      </sat-popover>
+      <input matInput
+             [placeholder]="'COMPONENTS__SKILLTREE_PROPERTIES__WEIGHT' | translate"
+             [formControl]="weight" type="number"
+             (blur)="update('weight',weight)"
+             pattern="\d*">
+      <span matSuffix>
+        <button mat-icon-button [stcDynamicPopoverAnchorFor]="weightPopover">
+            <mat-icon svgIcon="info_outline">info_outline</mat-icon>
+          </button>
+      </span>
+      <mat-error *ngIf="weight.errors?.pattern">
+        {{ 'COMPONENTS__SKILLTREE_PROPERTIES__ERROR_NO_NUMBER' | translate }}
+      </mat-error>
     </mat-form-field>
   </mat-card>
 </div>
