add llama spit projectile to ranged skill

--- a/src/app/components/skills/ranged-skill/ranged-skill.component.html
+++ b/src/app/components/skills/ranged-skill/ranged-skill.component.html
@@ -90,6 +90,10 @@
             <mat-option value="DragonFireball">
               {{ 'COMPONENTS__SKILLS__RANGED__PROJECTILE__DRAGON_FIREBALL' | translate }} <span style="color: gray">(1.9+)</span>
             </mat-option>
+            <mat-option value="LlamaSpit">
+              {{ 'COMPONENTS__SKILLS__RANGED__PROJECTILE__LLAMA_SPIT' | translate }} <span
+              style="color: gray">(1.11+)</span>
+            </mat-option>
             <mat-option value="Trident">
               {{ 'COMPONENTS__SKILLS__RANGED__PROJECTILE__TRIDENT' | translate }} <span
               style="color: gray">(1.13+)</span>
