--- a/src/app/components/skilltree-creator/skilltree-creator.component.html
+++ b/src/app/components/skilltree-creator/skilltree-creator.component.html
@@ -1,40 +1,47 @@
 <mat-sidenav-container (backdropClick)="closeSidenav()">
   <mat-sidenav #sidenav class="sidenav"
-               fxLayout="column"
-               fxLayoutAlign="start center"
                [opened]="showSidenav$ | async"
                [disableClose]="true">
-    <button mat-icon-button (click)="importSkilltree()" matTooltipPosition="right"
-            [matTooltip]="'COMPONENTS__SKILLTREE_CREATOR__IMPORT' | translate">
-      <mat-icon svgIcon="input">input</mat-icon>
-    </button>
-    <button mat-icon-button routerLink="/import/legacy" (click)="closeSidenav()" matTooltipPosition="right"
-            [matTooltip]="'COMPONENTS__SKILLTREE_CREATOR__IMPORT_LEGACY' | translate">
-      <mat-icon svgIcon="input">input</mat-icon>
-    </button>
-    <button mat-icon-button (click)="closeSidenav()" matTooltipPosition="right" disabled
-            [matTooltip]="'COMPONENTS__NOT_YET_IMPLEMENTED' | translate">
-      <mat-icon svgIcon="cloud_upload">cloud upload</mat-icon>
-    </button>
-    <button *ngIf="language$ | async as lang" mat-icon-button (click)="toggleLang(lang)" matTooltipPosition="right"
-            [matTooltip]="'COMPONENTS__SKILLTREE_CREATOR__CHANGE_LANGUAGE' | translate"
-            [disabled]="languages.length <= 1">
-      <mat-icon svgIcon="translate">translate</mat-icon>
-    </button>
-    <button *ngIf="!(premium$ | async)" style="color: red"
-            mat-icon-button (click)="togglePremium()" matTooltipPosition="right"
-            [matTooltip]="'COMPONENTS__SKILLTREE_CREATOR__PREMIUM_ENABLE' | translate">
-      <mat-icon svgIcon="star">star</mat-icon>
-    </button>
-    <button *ngIf="premium$ | async" style="color: green"
-            mat-icon-button (click)="togglePremium()" matTooltipPosition="right"
-            [matTooltip]="'COMPONENTS__SKILLTREE_CREATOR__PREMIUM_DISABLE' | translate">
-      <mat-icon svgIcon="star">star</mat-icon>
-    </button>
-    <button mat-icon-button routerLink="/about" (click)="closeSidenav()" matTooltipPosition="right"
-            [matTooltip]="'COMPONENTS__SKILLTREE_CREATOR__ABOUT' | translate">
-      <mat-icon svgIcon="info_outline">info_outline</mat-icon>
-    </button>
+    <div style="width: 100%; height: 100%"
+         fxLayout="column"
+         fxLayoutAlign="start center">
+      <button mat-icon-button (click)="importSkilltree()" matTooltipPosition="right"
+              [matTooltip]="'COMPONENTS__SKILLTREE_CREATOR__IMPORT' | translate">
+        <mat-icon svgIcon="input">input</mat-icon>
+      </button>
+      <button mat-icon-button routerLink="/import/legacy" (click)="closeSidenav()" matTooltipPosition="right"
+              [matTooltip]="'COMPONENTS__SKILLTREE_CREATOR__IMPORT_LEGACY' | translate">
+        <mat-icon svgIcon="input">input</mat-icon>
+      </button>
+      <button mat-icon-button (click)="closeSidenav()" matTooltipPosition="right" disabled
+              [matTooltip]="'COMPONENTS__NOT_YET_IMPLEMENTED' | translate">
+        <mat-icon svgIcon="cloud_upload">cloud upload</mat-icon>
+      </button>
+      <button *ngIf="language$ | async as lang" mat-icon-button (click)="toggleLang(lang)" matTooltipPosition="right"
+              [matTooltip]="'COMPONENTS__SKILLTREE_CREATOR__CHANGE_LANGUAGE' | translate"
+              [disabled]="languages.length <= 1">
+        <mat-icon svgIcon="translate">translate</mat-icon>
+      </button>
+      <button *ngIf="!(premium$ | async)" style="color: red"
+              mat-icon-button (click)="togglePremium()" matTooltipPosition="right"
+              [matTooltip]="'COMPONENTS__SKILLTREE_CREATOR__PREMIUM_ENABLE' | translate">
+        <mat-icon svgIcon="star">star</mat-icon>
+      </button>
+      <button *ngIf="premium$ | async" style="color: green"
+              mat-icon-button (click)="togglePremium()" matTooltipPosition="right"
+              [matTooltip]="'COMPONENTS__SKILLTREE_CREATOR__PREMIUM_DISABLE' | translate">
+        <mat-icon svgIcon="star">star</mat-icon>
+      </button>
+      <button mat-icon-button routerLink="/about" (click)="closeSidenav()" matTooltipPosition="right"
+              [matTooltip]="'COMPONENTS__SKILLTREE_CREATOR__ABOUT' | translate">
+        <mat-icon svgIcon="info_outline">info_outline</mat-icon>
+      </button>
+      <span class="fill-remaining-space"></span>
+      <button mat-icon-button (click)="close()" matTooltipPosition="right"
+              [matTooltip]="'COMPONENTS__SKILLTREE_CREATOR__CLOSE' | translate">
+        <mat-icon svgIcon="exit_to_app">exit_to_app</mat-icon>
+      </button>
+    </div>
   </mat-sidenav>
   <div fxLayout="row" class="top-toolbar">
     <button mat-button
