fix small fireball id

--- a/src/app/components/skills/ranged-skill/ranged-skill.component.html
+++ b/src/app/components/skills/ranged-skill/ranged-skill.component.html
@@ -76,7 +76,7 @@
             <mat-option value="Snowball">
               {{ 'COMPONENTS__SKILLS__RANGED__PROJECTILE__SNOWBALL' | translate }}
             </mat-option>
-            <mat-option value="Fireball">
+            <mat-option value="SmallFireball">
               {{ 'COMPONENTS__SKILLS__RANGED__PROJECTILE__FIREBALL' | translate }}
             </mat-option>
             <mat-option value="LargeFireball">
