adjust codebox color

--- a/src/resources/styles/components/minecraft.scss
+++ b/src/resources/styles/components/minecraft.scss
@@ -93,7 +93,7 @@
 }
 
 .codebox {
-  background-color: #EEEEFF;
+  background-color: whitesmoke;
   padding: 0.5rem;
   font-size: 1rem;
   line-height: 1.5;
