--- a/src/app/components/skill-editor/skill-editor.component.html
+++ b/src/app/components/skill-editor/skill-editor.component.html
@@ -9,7 +9,7 @@
           &nbsp;{{ selectedSkill.name | translate }}
         </span>
       </mat-select-trigger>
-      <mat-option *ngFor="let skill of skills" [value]="skill" [disabled]="skill.premium && !(premium$ | async)">
+      <mat-option *ngFor="let skill of skills" [value]="skill">
         <img [src]="'assets/img/skills/' +  skill.icon" class="matl-chip__skill">
         &nbsp;{{ skill.name | translate }}
         <span *ngIf="(selectedSkilltree$ | async).skills[skill.id]?.length > 0"
