--- a/src/app/components/skills/ride-skill/ride-skill.component.html
+++ b/src/app/components/skills/ride-skill/ride-skill.component.html
@@ -123,7 +123,10 @@
       </mat-card>
     </div>
     <mat-action-row>
-      <button mat-raised-button color="primary" (click)="deleteRule(skilltree, upgrade)">
+      <button mat-button color="primary" (click)="editRule(skilltree, upgrade)">
+        {{ 'COMPONENTS__SKILLS__EDIT' | translate }}
+      </button>
+      <button mat-button color="warn" (click)="deleteRule(skilltree, upgrade)">
         <mat-icon svgIcon="delete">delete</mat-icon>
         {{ 'COMPONENTS__SKILLS__DELETE' | translate }}
       </button>
