--- a/src/app/components/skills/damage-skill/damage-skill.component.html
+++ b/src/app/components/skills/damage-skill/damage-skill.component.html
@@ -10,7 +10,7 @@
   <mat-expansion-panel *ngFor="let upgrade of skilltree.skills.Damage; trackBy: trackById; let i = index"
                        [expanded]="selectedUpgrade == i" (opened)="selectedUpgrade = i">
     <mat-expansion-panel-header>
-      {{ LevelRule.toKey(upgrade.rule) | translate:LevelRule.toData(upgrade.rule) }}
+      {{ upgrade.rule | levelRuleKey | translate:(upgrade.rule | levelRuleToData) }}
     </mat-expansion-panel-header>
     <div fxLayout="column">
       <mat-card>
